# binsize

./: Cargo.toml  LICENCE.md  README.md
.cargo/: binsize.toml
.github/workflows/: build.yml
src/: args.rs  attr_str.rs  cargo.rs  demangle.rs  exe.rs  link.rs  main.rs  output.rs  table.rs  util.rs
