[package]
name = "binsize"
version = "0.9.1"
edition = "2024"
authors = [
    "Max Tkachuk <max.r.tkachuk@gmail.com>"
]
description = "A utility to provide comprehensive information about symbol sizes in compiled binaries"
readme = "README.md"
keywords = [
    "cli",
    "bloat",
    "size",
    "binary-size",
    "memory-usage",
]
categories = [
    "command-line-utilities"
]
license = "MIT"
repository = "https://github.com/maxrt101/binsize"

[dependencies]
toml = "0.9.7"
json = "0.12.4"
libc = "0.2.176"
regex = "1.11.3"
object = "0.37.3"
memmap2 = "0.9.8"
rustc-demangle = "0.1.26"
cpp_demangle = "0.5.0"
